# intelligent-assistant-platform

./: .coverage  .env copy.example  .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  Dockerfile  QUERY_EXPANSION_AND_CACHING.md  README.md  SEARCH_QUALITY_IMPROVEMENTS.md  WEEK2_SUMMARY.md  claude_desktop_config.json.example  compose.api.yml  compose.yml  launcher.sh  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/: README.md  agent-registry.md  bootstrap.md  launch.json  rules.md  settings.json  settings.local.json
.github/: pull_request_template.md
ableton_bridge/: README.md  auto_setup.py  capture.py
api/: deps.py  main.py
copilot-ui/: index 2.html  package-lock 2.json  package.json  tailwind.config 2.ts  tailwind.config.ts  vite.config 2.ts
core/: categories.py  chunking.py  config.py  genre_detector.py  midi.py  query_expansion.py  sub_domain_detector.py  text.py  types.py
data/: musical_memory.md  opendock_vision.md  rag_architecture.txt
db/: init_db.py  models.py  rerank.py  search.py  session.py
demo/: DEMO_SCRIPT.md
docs/: ARCHITECTURE.md  BLOG_POST.md  CONTRIBUTING.md  DECISIONS.md  WORKLOG.md  architecture_diagram.md
eval/: __init__ 2.py  dataset.py  judge 2.py  regression.py  report.py  retrieval_metrics.py  runner.py  tier_comparison 2.py
eval_results/: baseline.json  baseline_with_judge.json  post_corpus_expansion 2.json  post_corpus_expansion_v2 2.json
infrastructure/: __init__.py  cache.py  circuit_breaker 2.py  metrics.py  rate_limiter 2.py  retry 2.py
ingestion/: __main__.py  ableton_bridge 2.py  ableton_bridge.py  audio_engine.py  audio_loader 2.py  audio_loader.py  cache.py  embeddings.py  generation 2.py  generation.py  ingest.py  ingest_ocr.py  (+11 more)
(+406 files in other folders)
