[project]
name = "intelligent-assistant"
version = "0.1.0"
description = "Production-grade AI assistant platform"
requires-python = ">=3.12"

[tool.setuptools.packages.find]
where = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]  # opcional si no quieres guerras por líneas largas

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers --tb=short"
markers = [
    "unit: Pure unit tests — no I/O, no mocks (default for core/)",
    "integration: Tests that use FastAPI TestClient or mock external services",
    "slow: Tests with time.sleep or heavy computation",
]
filterwarnings = [
    "error",              # Turn warnings into errors
    "ignore::DeprecationWarning:tiktoken",  # tiktoken internal deprecation
]

[tool.coverage.run]
source = ["core", "db", "api", "ingestion"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
show_missing = true
skip_empty = true
fail_under = 60
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ ==",
]